# shooter

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yaml
credits/: CREDITS.md
game_plugin/: Cargo.toml
game_plugin/src/: audio.rs  lib.rs  loading.rs  menu.rs  player.rs
src/: main.rs
